service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dogecoin-forecasting
spec:
  selector:
    app: dogecoin-forecasting
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
