dogecoin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dogecoin-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost # Change to your domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dogecoin-forecasting
            port:
              number: 8501
